# Project-7-esp32-iot-setup-rust

./: README.md  metadata.yml
lab8_2/: Cargo.toml
lab8_2/src/: main.rs
lab8_3/: Cargo.toml
lab8_3/src/: main.rs
