[package]
name = "lab8_3"
version = "0.1.0"
authors = ["root"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "lab8_3"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.48", default-features= false }
esp-idf-hal = "0.43.1"
esp-idf-sys = "0.34.1"
anyhow= "1.0"
smart-leds = "0.3"
smart-leds-trait = "0.3"

[build-dependencies]
embuild = "0.31.3"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
